// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CNY amount when conversion rate is known 1`] = `
<div>
  ¥3,431.37
</div>
`;

exports[`should render USD amount without conversion rates loaded 1`] = `
<div>
  $500.20
</div>
`;

exports[`should render loading indicator when display currency is CNY and conversion rate is unknown 1`] = `
<div>
  <div
    style="fill: #333; height: 22px; width: 22px;"
  >
    <svg
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      
  
      <path
        d="M0 12 V20 H4 V12z"
        transform="translate(0 0)"
      >
        
    
        <animatetransform
          attributeName="transform"
          begin="0"
          calcMode="spline"
          dur="1.5s"
          keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
          keyTimes="0;0.3;0.6;1"
          repeatCount="indefinite"
          type="translate"
          values="0 0; 28 0; 0 0; 0 0"
        />
        
  
      </path>
      
  
      <path
        d="M0 12 V20 H4 V12z"
        opacity="0.5"
        transform="translate(0 0)"
      >
        
    
        <animatetransform
          attributeName="transform"
          begin="0.1s"
          calcMode="spline"
          dur="1.5s"
          keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
          keyTimes="0;0.3;0.6;1"
          repeatCount="indefinite"
          type="translate"
          values="0 0; 28 0; 0 0; 0 0"
        />
        
  
      </path>
      
  
      <path
        d="M0 12 V20 H4 V12z"
        opacity="0.25"
        transform="translate(0 0)"
      >
        
    
        <animatetransform
          attributeName="transform"
          begin="0.2s"
          calcMode="spline"
          dur="1.5s"
          keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
          keyTimes="0;0.3;0.6;1"
          repeatCount="indefinite"
          type="translate"
          values="0 0; 28 0; 0 0; 0 0"
        />
        
  
      </path>
      

    </svg>
    

  </div>
</div>
`;
